// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete() should do. 1`] = `
Array [
  Object {
    "payload": "requestList",
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/LIST/SET",
  },
]
`;

exports[`error() should do. 1`] = `
Array [
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/LIST/CLEAR",
  },
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - Error Test",
      "problem": "Error Test",
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`finally() should do. 1`] = `
Array [
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/PAGE/FINISH_LOADING",
  },
]
`;

exports[`loading should use globalLoading 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/PAGE/START_LOADING",
  },
  Object {
    "type": "LOADING_END",
  },
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/PAGE/FINISH_LOADING",
  },
]
`;

exports[`loading should use only pageLoading 1`] = `
Array [
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/PAGE/START_LOADING",
  },
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/PAGE/FINISH_LOADING",
  },
]
`;

exports[`start() should do. 1`] = `
Array [
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/PAGE/START_LOADING",
  },
]
`;
